Fix building with spellchecking disabled

Change-Id: Ia3744634a746fe49b34e10a3b97762fa5b67745c
Fixes: QTBUG-76869
Reviewed-by: Michal Klocek <michal.klocek@qt.io>