chromium/qtwebengine/browser/qtwebengine_packaged_service_manifest.cc
@@ -6,9 +6,13 @@
 
 #include "base/no_destructor.h"
 #include "build/build_config.h"
-#include "components/spellcheck/common/spellcheck.mojom.h"
+#include "components/spellcheck/spellcheck_buildflags.h"
 #include "services/proxy_resolver/proxy_resolver_manifest.h"
 #include "services/service_manager/public/cpp/manifest_builder.h"
+
+#if BUILDFLAG(ENABLE_SPELLCHECK)
+#include "components/spellcheck/common/spellcheck.mojom.h"
+#endif
 
 namespace {
 
@@ -23,8 +27,10 @@ const service_manager::Manifest &GetQtWebEngineManifest()
                              .CanConnectToInstancesWithAnyId(true)
                              .CanRegisterOtherServiceInstances(true)
                              .Build())
+#if BUILDFLAG(ENABLE_SPELLCHECK)
             .ExposeCapability("renderer",
                               service_manager::Manifest::InterfaceList<spellcheck::mojom::SpellCheckHost>())
+#endif
         .RequireCapability("qtwebengine_renderer", "browser")
         .Build()
   };
